# agrobr-qgis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  Makefile  README.md  README.pt-BR.md  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  tests.yml
agrobr_qgis/: __init__.py  metadata.txt  plugin.py
agrobr_qgis/core/: auth_manager.py  constants.py  data_contract.py  dependency_doctor.py  exceptions.py  fetch_controller.py  health_check.py  layer_builder.py  logger.py  proxy.py  registry.py  settings_manager.py  source_adapter.py  spatial_join.py  task_runner.py  template.py  template_runner.py  templates.py
agrobr_qgis/gui/: dock.py  param_panel.py  result_panel.py  settings_dialog.py  source_tree.py  state.py
agrobr_qgis/processing/: provider.py
agrobr_qgis/sources/: __init__.py  ana.py  b3.py  bcb.py  cepea.py  conab.py  defensivos.py  desmatamento.py  funai.py  ibama.py  ibge.py  icmbio.py  incra.py  mapbiomas_alerta.py  queimadas.py  sfb.py  sicar.py  usda.py  zarc.py
agrobr_qgis/styles/: line.qml  point.qml  polygon.qml
docs/: installation.md  troubleshooting.md
docs/sources/: README.md  ana.md  b3.md  bcb.md  cepea.md  conab.md  defensivos.md  desmatamento.md  funai.md  ibama.md  ibge.md  icmbio.md  incra.md  mapbiomas.md  queimadas.md  sfb.md  sicar.md  usda.md  zarc.md
tests/: conftest.py
tests/edge_cases/: test_broken_join.py  test_cancelled_task.py  test_complex_polygons.py  test_duplicate_columns.py  test_empty_dataframe.py  test_encoding.py  test_invalid_geometry.py  (+5 more)
(+47 files in other folders)
