[project]
name = "agrobr-qgis"
version = "0.1.0"
description = "Plugin QGIS para dados agrícolas brasileiros via agrobr"
license = "GPL-2.0-or-later"
requires-python = ">=3.12"
authors = [
    { name = "Bruno", email = "brunoescalhao@gmail.com" }
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = ["E501", "B008", "B905"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG002"]
"agrobr_qgis/gui/**" = ["ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["agrobr_qgis"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: testes lentos (> 5s)",
    "qgis: requer runtime QGIS",
    "edge: edge cases e degradation",
]
addopts = "-m 'not slow' --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["agrobr_qgis"]
branch = true
omit = [
    "agrobr_qgis/resources.py",
    "agrobr_qgis/core/task_runner.py",
    "agrobr_qgis/processing/*",
    "agrobr_qgis/gui/dock.py",
    "agrobr_qgis/gui/source_tree.py",
    "agrobr_qgis/gui/param_panel.py",
    "agrobr_qgis/gui/result_panel.py",
    "agrobr_qgis/gui/settings_dialog.py",
]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "__repr__",
    "\\.\\.\\.",
]
